--- a/styles/index.css
+++ b/styles/index.css
@@ -4,3 +4,7 @@
     background-color: lightblue;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+h3 {
+    color: lightcoral;
+}
