--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,10 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+h1 {
+    color: darkgreen;
+}
+
 h3 {
     color: lightcoral;
 }
